gpsmixer refactoring to lazily load speakers based on project and listener location

--- a/roundware/rw/static/l/lm.html
+++ b/roundware/rw/static/l/lm.html
@@ -205,289 +205,12 @@
     // var centerLon = -122.39746;
 
     // Cambridge
-    var centerLat = 42.3757058591274;
-    var centerLon = -71.1163690186463;
+    //var centerLat = 42.3757058591274;
+    //var centerLon = -71.1163690186463;
 
-    var poly = {
-        "type": "FeatureCollection",
-        "features": [
-            {
-                "geometry": {
-                    "type": "Polygon",
-                    "coordinates": [
-                        [
-                            [
-                                42, -78
-                            ],
-                            [
-                                41, -79
-                            ],
-                            [
-                                41, -77
-                            ],
-                            [
-                                42, -78
-                            ]
-                        ]
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "code": "TRI",
-                    "backupuri": "",
-                    "uri": "http://scapesaudio.dyndns.org:8000/scapes2.mp3",
-                    "longitude": -71.218872,
-                    "activeyn": true,
-                    "project": 1,
-                    "attenuation_distance": 10000,
-                    "minvolume": 0,
-                    "mindistance": 3840,
-                    "latitude": 42.261049,
-                    "maxvolume": 0.5,
-                    "model": "rw.speaker",
-                    "maxdistance": 5304
-                },
-                "id": 4
-            },
-            {
-                "geometry": {
-                    "type": "Polygon",
-                    "coordinates": [
-                        [
-                            [
-                                -1.25042096457759,
-                                0.204363106772745
-                            ],
-                            [
-                                -1.01702303720376,
-                                0.504754883670546
-                            ],
-                            [
-                                -0.599932296619044,
-                                0.625776031197718
-                            ],
-                            [
-                                -0.152586269152534,
-                                0.448566493747217
-                            ],
-                            [
-                                0.035428727898607,
-                                0.001220466280707
-                            ],
-                            [
-                                -0.109364430749973,
-                                -0.30349349445735
-                            ],
-                            [
-                                -0.340601266203676,
-                                -0.487186307668236
-                            ],
-                            [
-                                -0.811719304791594,
-                                -0.487186307668236
-                            ],
-                            [
-                                -1.0969834382485,
-                                -0.331587689419015
-                            ],
-                            [
-                                -1.25042096457759,
-                                0.204363106772745
-                            ]
-                        ],
-                        [
-                            [
-                                -0.880874246235692,
-                                0.122241613807879
-                            ],
-                            [
-                                -0.796591661350698,
-                                0.35563954118171
-                            ],
-                            [
-                                -0.362212185404957,
-                                0.325384254299917
-                            ],
-                            [
-                                -0.239029945957657,
-                                -0.050645739802366
-                            ],
-                            [
-                                -0.314668163162139,
-                                -0.327265505578759
-                            ],
-                            [
-                                -0.504844252133409,
-                                -0.374809527821576
-                            ],
-                            [
-                                -0.811719304791594,
-                                -0.275399299495685
-                            ],
-                            [
-                                -0.697181433024807,
-                                0.197879831012361
-                            ],
-                            [
-                                -0.52645517133469,
-                                0.200040922932489
-                            ],
-                            [
-                                -0.444333678369823,
-                                -0.057129015562751
-                            ],
-                            [
-                                -0.468105689491232,
-                                -0.245144012613892
-                            ],
-                            [
-                                -0.796591661350698,
-                                -0.111156313565952
-                            ],
-                            [
-                                -0.889518613916205,
-                                -0.02471263676083
-                            ],
-                            [
-                                -0.958673555360303,
-                                -0.0917064862848
-                            ],
-                            [
-                                -0.958673555360303,
-                                -0.0917064862848
-                            ],
-                            [
-                                -0.958673555360303,
-                                -0.0917064862848
-                            ],
-                            [
-                                -0.880874246235692,
-                                0.122241613807879
-                            ]
-                        ]
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "code": "1",
-                    "backupuri": "http://scapesaudio.dyndns.org:8000/scapes1.mp3",
-                    "uri": "http://scapesaudio.dyndns.org:8000/mfj1.mp3",
-                    "longitude": 1,
-                    "activeyn": false,
-                    "project": 1,
-                    "attenuation_distance": 1000,
-                    "minvolume": 0,
-                    "mindistance": 10,
-                    "latitude": 1,
-                    "maxvolume": 0.5,
-                    "model": "rw.speaker",
-                    "maxdistance": 20
-                },
-                "id": 1
-            },
-            {
-                "geometry": {
-                    "type": "Polygon",
-                    "coordinates": [
-                        [
-                            [
-                                6.6796875,
-                                -6.328125
-                            ],
-                            [
-                                -4.482421875,
-                                -2.8125
-                            ],
-                            [
-                                -8.701171875,
-                                -7.55859375
-                            ],
-                            [
-                                -10.3271484375,
-                                -13.53515625
-                            ],
-                            [
-                                1.669921875,
-                                -16.875
-                            ],
-                            [
-                                7.470703125,
-                                -15.1171875
-                            ],
-                            [
-                                6.6796875,
-                                -6.328125
-                            ]
-                        ]
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "code": "TEST2",
-                    "backupuri": "",
-                    "uri": "http://scapesaudio.dyndns.org:8000/mg2.mp3",
-                    "longitude": -71.113129,
-                    "activeyn": false,
-                    "project": 1,
-                    "attenuation_distance": 100000,
-                    "minvolume": 0,
-                    "mindistance": 10,
-                    "latitude": 42.380865,
-                    "maxvolume": 0.2,
-                    "model": "rw.speaker",
-                    "maxdistance": 100
-                },
-                "id": 2
-            },
-            {
-                "geometry": {
-                    "type": "Polygon",
-                    "coordinates": [
-                        [
-                            [
-                                1,
-                                -1
-                            ],
-                            [
-                                -1,
-                                -1
-                            ],
-                            [
-                                -1,
-                                1
-                            ],
-                            [
-                                1,
-                                1
-                            ],
-                            [
-                                1,
-                                -1
-                            ]
-                        ]
-                    ]
-                },
-                "type": "Feature",
-                "properties": {
-                    "code": "SQUARE",
-                    "backupuri": "",
-                    "uri": "http://scapesaudio.dyndns.org:8000/scapes3.mp3",
-                    "longitude": 5,
-                    "activeyn": false,
-                    "project": 1,
-                    "attenuation_distance": 10000,
-                    "minvolume": 0,
-                    "mindistance": 3162,
-                    "latitude": 5,
-                    "maxvolume": 0.5,
-                    "model": "rw.speaker",
-                    "maxdistance": 5529
-                },
-                "id": 3
-            }
-        ]
-    };
-
+    // Null Island
+    var centerLat = 0;
+    var centerLon = 0;
 
     $(function () {
         // US coordinates
@@ -496,7 +219,7 @@
 
         var myOptions = {
             scrollwheel: false,
-            zoom: 4,
+            zoom: 7,
             center: new google.maps.LatLng(centerLat, centerLon),
             mapTypeId: google.maps.MapTypeId.ROADMAP //HYBRID, TERRAIN, SATELLITE
         };
